<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">拒宅</string>
    <!-- login begin -->
    <string name="login">登录</string>
    <string name="login_btn_text">登录</string>
    <string name="find_pwd">找回密码</string>
    <string name="tip_reg">还没有账号？来这里注册</string>
    <string name="login_input_tip_account">输入登录帐号</string>
    <string name="login_input_tip_pwd">输入登录密码</string>

    <!-- 第三方登录 begin -->
    <string name="sina_title">新浪微博</string>
    <string name="db_title">豆瓣帐号</string>
    <string name="qq_title">QQ帐号</string>
    <string name="sina_login_title">微博登录</string>
    <string name="db_login_title">豆瓣登录</string>
    <string name="qq_login_title">QQ登录</string>
    <string name="sina_bind_title">绑定浪微博帐号</string>
    <string name="db_bind_title">绑定豆瓣帐号</string>
    <string name="qq_bind_title">绑定QQ帐号</string>
    <string name="webview_title">用户授权</string>
    <!-- 第三方登录 end -->
    <!-- login end -->
    <!-- register begin -->
    <string name="register_btn_text">注册</string>
    <string name="tip_login">己有账号，请直接登录</string>
    <string name="register">帐号注册</string>
    <string name="reg_input_tip_account">输入邮箱</string>
    <string name="reg_input_tip_nickname">输入昵称</string>
    <string name="reg_input_tip_pwd">输入密码</string>
    <string name="reg_input_tip_rep_pwd">重复密码</string>
    <!-- register end -->
    <!-- tab item title -->
    <string name="tabitem_zhaoban">找伴</string>
    <string name="tabitem_chuquwan">出去玩</string>
    <string name="tabitem_message">消息</string>
    <string name="tabitem_home">我家</string>
    <string name="tabitem_setting">设置</string>

    <!-- find pwd  begin -->
    <string name="forgot_password_title">忘记密码</string>
    <string name="forgot_pwd_tip">请输入注册邮箱</string>
    <!-- find pwd  end -->


    <!-- common begin -->
    <string name="confirm_message">确定执行该操作？</string>
    <string name="confirm">提示</string>
    <string name="cancel">取消</string>
    <string name="operating">操作</string>
    <string name="finish">完成</string>
    <string name="close">关闭</string>
    <string name="ok">确定</string>
    <string name="logout">退出</string>
    <string name="send_ok">发送成功</string>
    <string name="more">查看更多</string>
    <string name="loding">正在加载</string>
    <string name="sending">正在请求</string>
    <string name="success">操作成功</string>
    <string name="age">岁</string>
    <string name="all">全部</string>
    <string name="before_seconds">刚刚</string>
    <string name="before_minutes">分前</string>
    <string name="before_hour">小时前</string>
    <string name="yesterday">昨天</string>
    <string name="before_yesterday">前天</string>
    <string name="send">发送</string>
    <string name="select_pic">选择照片</string>
    <string name="select_by_album">从相册里选</string>
    <string name="select_by_camera">拍照</string>
    <string name="delete_pic">删除图片</string>
    <string name="contact">联系Ta</string>
    <string name="invite_friend">邀请好友</string>
    <string name="private_letter">私信ta</string>
    <string name="interest">关注ta</string>
    <string name="un_interest">取消关注</string>
    <string name="done_interest">已关注</string>
    <string name="verified">审核未通过</string>
    <string name="verifying">正在审核中</string>
    <string name="upload_logo">上传头像</string>
    <string name="nickname">昵称</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="feature">自我评价</string>
    <string name="address">所在地</string>
    <string name="profession">职业</string>
    <string name="boy">男</string>
    <string name="girl">女</string>
    <string name="select_city">选择城市</string>
    <string name="other">其他</string>
    <string name="save_success">保存成功</string>
    <string name="note">注意</string>
    <string name="clean">清空</string>
    <string name="category_all">拒宅项目</string>
    <string name="save">保存</string>
    <string name="please_wait">请稍等</string>
    <string name="yuan">元</string>
    <string name="select_gender">请选择性别</string>
    <string name="online_now">当前在线</string>
    <string name="online_today">今日来访</string>
    <string name="online_recent">近期来访</string>
    <!-- common end -->


    <!-- test start -->
    <string name="image_test_des">test</string>
    <!-- test end -->


    <!-- tip  begin -->
    <string name="tip_loging">正在登录</string>
    <string name="tip_reging">正在注册</string>
    <string name="tip_logouting">正在登出</string>
    <string name="tip_cache_clearing">正在清除缓存</string>
    <string name="tip_logout_confirm">确定要退出吗？</string>
    <string name="tip_clear_cache_confirm">确定清除图片缓存吗？</string>
    <string name="tip_find_pwding">正在找回密码</string>
    <!-- tip end -->
    <!-- idea begin -->
    <string name="i_want">我想去 </string>
    <string name="want_done">已想去 </string>
    <string name="use_count">人想去 </string>
    <string name="idea_detail_title">好主意详情</string>
    <string name="share">分享</string>
    <string name="idea_users_content_begin_text">同城%1$s人想去</string>
    <string name="idea_users_content_end_text">全国共%1$s人</string>
    <string name="idea_users_title">想去的人</string>
    <string name="about">约ta同去</string>
    <string name="about_done">已约同去</string>
    <string name="idea_recommend">推荐</string>
    <string name="idea_new_time">最新</string>
    <string name="i_want_success_text">发布成功\n也许会有人约你同去哦</string>
    <string-array name="idea_user_head_tab_item">
        <item>同城</item>
        <item>全国</item>
    </string-array>
    <string name="idea_detail_use_count_tip">约人同去</string>
    <string name="baseinfo">基本信息</string>
    <string name="idea_detail_tip">简介</string>
    <!-- idea end -->
    <!-- dialog begin -->
    <string name="dialog_title">我的消息</string>
    <string name="dialog_content_title">与&#160;%1$s&#160;的对话</string>
    <string name="dialog_delete">删除对话</string>
    <string name="image_delete">删除图片</string>
    <string name="dialog_delete_confirm">确定删除与&#160;%1$s&#160;的所有私信么?</string>
    <!-- dialog end -->
    <!-- home begin -->
    <string name="home">我家</string>
    <string name="home_title">我的主页</string>
    <string name="home_update_profile_btn">编辑</string>
    <string name="interest_title">我的关注</string>
    <string name="interest_me_title">我的粉丝</string>
    <string name="my_post_title">我的拒宅</string>
    <string name="user_home_title">的主页</string>
    <string name="user_home_post_count">共&#160;%1$s&#160;条拒宅 </string>
    <string name="home_setting_title">设置个人资料</string>

    <string-array name="gender_item">
        <item>男</item>
        <item>女</item>
    </string-array>

    <string name="setting_nickname_tip">不要超过10个字哦</string>
    <string name="setting_profession_tip">不要超过10个字哦</string>
    <string name="setting_feature_tip">说说你是个什么样的人吧70字以内</string>
    <string name="setting_feature_title_tip">请输入自我评价</string>
    <string name="home_info_layout">%1$s (%2$s)</string>
    <string name="un_interest_confirm">确定取消关注么?</string>
    <string name="user_interest_success">好的，ta看到会开心的</string>

    <!-- home end -->


    <!-- post begin -->
    <string-array name="post_head_tab_item">
        <item>同城活跃</item>
        <item>最新发布</item>
    </string-array>
    <string-array name="select_gender_item">
        <item>全部小宅</item>
        <item>宅男</item>
        <item>宅女</item>
    </string-array>

    <string name="post_interest">&#160;&#160;有兴趣</string>
    <string name="post_interest_done">&#160;&#160;已有兴趣</string>
    <string name="post_head">我想去</string>
    <string name="post_detail_title">拒宅详情</string>
    <string name="post_detail_response">有兴趣</string>
    <string name="post_detail_response_done">已有兴趣</string>
    <string name="post_interest_success">ta看到会开心的</string>
    <string name="post_detail_interest_cnt">%1$s&#160;人有兴趣</string>
    <string name="post_response_user_title">有兴趣的人</string>
    <!-- post end -->
    <!-- send post begin -->
    <string name="send_post_finish_button">发布</string>
    <string name="clean_content">清除文字</string>
    <string name="send_post_select_category_title">拒宅分类</string>
    <string name="send_post_place_title">输入地址</string>
    <string name="send_post_content_hint">我想找伴去&#8230;</string>
    <string name="send_post_content_tip">还剩%1$s字</string>
    <string name="send_post_title">发布拒宅</string>
    
    <!-- send post end -->


    <!-- 新手引导  begin -->
    <string name="user_guide_title">设置拒宅名片</string>
    <string name="begin_jz_btn_text">开始拒宅</string>
    <!-- 新手引导  end -->


    <!-- setting -->
    <string name="setting_title">设置</string>
    <string name="setting_cell_logout">退出帐号</string>
    <string name="setting_cell_clear_cache">清除缓存</string>
    <string name="setting_cell_version">版本更新</string>
    <string name="setting_cell_feedback">意见反馈</string>
    <string name="setting_cell_protocal">使用协议</string>
    <string name="setting_cell_authorize">授权设置</string>
    <string name="setting_authorize_expired">授权已过期</string>
    <string name="setting_authorize_unbind">未绑定</string>
    <string name="setting_authorize_has_bind">已绑定：%1$s</string>
    <string name="setting_cell_profile">个人资料设置</string>

    <!-- 授权 -->
    <string name="authorize_title">授权设置</string>
    <string name="authorize_bind_tip1">为了获得更加完整的拒宅体验，建议你现在就去绑定一个常用的第三方帐号</string>
    <string name="authorize_bind_tip2">授权后，你可以把拒宅计划同步到第三方平台，让好友及时看到你的拒宅召唤</string>
    <string name="authorize_back">下次再说</string>
    <string name="expired_authorize">重新授权</string>
    <string name="authorize_expired_tip1_sina">新浪微博授权已经过期</string>
    <string name="authorize_expired_tip2_sina">请重新授权激活微博同步功能</string>
    <string name="authorize_expired_tip1_db">豆瓣帐号授权已经过期</string>
    <string name="authorize_expired_tip2_db">请重新授权激活豆瓣说同步功能</string>
    <string name="authorize_expired_tip1_qq">qq帐号授权已经过期</string>
    <string name="authorize_expired_tip2_qq">请重新授权激活qq同步功能</string>
    <string name="bind_ok">绑定成功</string>
    <string name="authorize_ok">授权成功</string>

    <!-- share & invite -->
    <string name="share_title">分享到</string>
    <string name="share_to_tp_idea_text">想一起去：%1$s么？%2$s&#160;http://www.51juzhai.com/idea/%3$d</string>
    <string name="share_idea_place">地点：%1$s</string>
    <string name="share_to_email_idea_subject">分享拒宅好主意</string>
    <string name="share_to_email_idea_text">想一起去：%1$s么？%2$s&#160;http://www.51juzhai.com/idea/%3$d</string>
    <string name="share_to_mms_idea_text">想一起去：%1$s么？（来自 拒宅android版）http://www.51juzhai.com</string>

    <string name="invite_title">邀请</string>
    <string name="invite_text">刚发现一个小清新的脱宅社区，蛮有新意的；周末不想宅在家的朋友可以来试试哦~http://www.51juzhai.com</string>
    <string name="invite_subject">发现一个不错的社区，蛮有新意的</string>
    
    <!-- 消息栏模版 -->
    <string name="notification_title">拒宅消息</string>
    <string name="notification_un_read_message">你有%1$d条未读消息,快来看看吧</string>
    <string name="notification_week">快到周末了，想好去哪玩了么？来看看本周都有哪些拒宅好主意吧！</string>
</resources>