<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/page_background_color"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/authorize_bind_tip1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="12dp"
        android:text="@string/authorize_bind_tip1"
        android:textColor="@color/authorize_bind_tip1"
        android:textSize="16sp" />

    <com.juzhai.android.core.widget.list.table.widget.UITableView
        android:id="@+id/tp_bind_table_view"
        style="@style/UITableView"
        android:layout_below="@id/authorize_bind_tip1"/>

    <TextView
        android:id="@+id/authorize_bind_tip2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authorize_bind_tip1"
        android:layout_marginTop="210dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:text="@string/authorize_bind_tip2"
        android:textColor="@color/authorize_bind_tip2"
        android:textSize="16sp" />

    <Button
        android:id="@+id/back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/authorize_bind_tip2"
        android:layout_marginTop="40dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:background="@drawable/authorize_back_selector_button"
        android:gravity="center"
        android:text="@string/authorize_back"
        android:textColor="@color/white"
        android:textSize="17sp" />

</RelativeLayout>