<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_height="wrap_content"
	android:layout_width="fill_parent"
	>
		<TextView   android:layout_width="fill_parent"
					android:layout_height="wrap_content"
					android:gravity="center_vertical"
					android:layout_alignParentLeft="true"
					android:paddingLeft="12dp"
					android:paddingTop="5dp"
					android:paddingBottom="5dp"
					android:layout_alignParentTop="true"
				    android:text="@string/select_city"
				  	android:textColor="@color/white"
				  	android:textSize="25sp"
				  	android:id="@+id/textView"
				   />
	 <View 
	    android:id="@+id/divider" 
        android:layout_width="fill_parent"
        android:layout_height="0.5dp"
        android:layout_below="@+id/textView"
        android:background="@color/gray" />
	<LinearLayout 
	    android:layout_below="@+id/divider"
		android:layout_height="wrap_content" android:layout_width="wrap_content"
		android:layout_gravity="center_horizontal" android:paddingLeft="12dp"
		android:paddingRight="12dp" android:paddingTop="10dp" android:id="@+id/address_layout">
		<com.juzhai.android.core.widget.wheelview.WheelView
			android:id="@+id/province" android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
		<com.juzhai.android.core.widget.wheelview.WheelView
			android:id="@+id/city" android:layout_height="wrap_content"
			android:layout_width="wrap_content" />
	</LinearLayout>
	<RelativeLayout android:layout_width="wrap_content"
		android:layout_height="wrap_content" android:layout_centerHorizontal="true"
		android:layout_below="@+id/address_layout" android:layout_marginTop="5dp"
		android:paddingLeft="10dp"
		android:paddingRight="10dp"
		android:paddingTop="5dp"
		android:paddingBottom="5dp"
		android:layout_centerInParent="true">
		<Button android:id="@+id/btn_ok"
				android:layout_width="140dp" 
				android:text="@string/ok"
				android:layout_height="wrap_content"
				android:layout_alignParentLeft="true"
				android:textSize="15sp"
				/>
		<Button android:id="@+id/btn_cancel"
				android:layout_width="140dp" 
				android:text="@string/cancel"
				android:layout_height="wrap_content"
				android:textSize="15sp"
				android:layout_alignParentRight="true"/>
	</RelativeLayout>
</RelativeLayout>
